Chart and table is no longer cut off at print

--- a/statistics-web/src/main/webapp/css/inera-statistics.css
+++ b/statistics-web/src/main/webapp/css/inera-statistics.css
@@ -1603,3 +1603,9 @@ div.datatablescrollable {
 	display: none;
 }
 
+.details-table-data {
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-weight: bold;
+}
